style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500;600;700&display=swap');

:root{
    --primary-color: #6366F1;
    --accent-color: #3f83f8;
    --text-color: #333333;
    --link-color: #2563eb;
    --background-color: #ffffff;
    --light-gray: #f0f0f0;
    --gray: #808080;
    --dark-gray: #555;
    --switch-bg: #f0f0f0;
    --switch-icon: #555; 
}

.darkmode{
    --primary-color: #818CF8;        
    --accent-color: #60A5FA;         
    --text-color: #E5E7EB;
    --link-color: #3B82F6;
    --background-color: #0F172A;
    --light-gray: #1E293B;
    --gray: #94A3B8;
    --dark-gray: #CBD5E1;
    --switch-bg: #1E293B;
    --switch-icon: #E5E7EB;
}

*{
    margin: 0;
    padding: 0;
    font-family: 'Inter', sans-serif;
    text-decoration: none;
}

body{
    height: 100vh;
    text-align: center;
    background-color: var(--background-color);
    /* background-color: rgb(44, 34, 34); */
    padding: 0.1rem;
}

.switchbutton{
    background-color: var(--text-color);
}

#theme-Switch {
  height: 50px;
  width: 50px;
  padding: 0;
  border-radius: 50%;
  background-color: var(--switch-bg);

  display: flex;
  justify-content: center;
  align-items: center;

  position: fixed;
  top: 20px;
  right: 20px;

  cursor: pointer;
  transition: 0.3s;
}

#theme-Switch svg{
    fill: var(--switch-icon);
}

#theme-Switch svg:last-child{
    display: none;
}

.darkmode #theme-Switch svg:first-child{
    display: none;
}

.darkmode #theme-Switch svg:last-child{
    display: block;
}


.headerContent{
    max-width: 880px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
}

.logo{
    display: flex;
    align-items: center;
    gap: 0.625rem;
    font-size: 1.5rem;
    color: var(--text-color);
    font-weight: bold;
    text-decoration: none;
}

.logoIcon{
    height: 3rem;
    width: 3rem;
}

.nav{
    display: none;
    gap: 1.5rem;
}

@media screen and (min-width:700px) {
    .nav{
        display: flex;
    }
}

.navLinks{
    color: #718096;
    font-size: 0.900rem;
    font-weight: 600;
    transition: color 0.1s;
}

.navLinks:hover{
    color: var(--link-color);
}

.contactButton{
    display: none;
    border: none;
    border-radius: 0.375rem;
    background-color: var(--primary-color);
    color: var(--background-color);
    padding: 0.55rem 1.25rem;
    transition: all 0.1s;
    font-size: 0.825rem;
    font-weight: 600;
}

@media screen and (min-width: 700px) {
    .contactButton{
        display: block;
    }
}

.contactButton:hover{
    background-color: #5254f8;
}

.mainSection{
    max-width: 880px;
    display: flex;
    flex-direction: column;
    padding: 0.6rem;
    gap: 2rem;
    align-items: center;
    margin: 0 auto;
}

.leftMain{
    text-align: center;
    animation: slideFromLeft 1s ease forwards;
    opacity: 0;
    display: flex;
    flex-direction: column;
    gap: 0.6rem;
}

@keyframes slideFromLeft {
    0%{
        opacity: 0;
        transform: translateX(-100%);
    }

    100%{
        opacity: 1;
        transform: translateX(0);
    }
}

.sectionLabel{
    font-size: 1rem;
    font-weight: 600;
    color: var(--primary-color);
}

.sectionTitle{
    font-size: 2rem;
    padding: 1.02rem;
    color: var(--text-color);
}

.sectionDesc{
    color: var(--gray);
    font-size: 1.14rem;
}

.buttonGroup{
    display: flex;
    gap: 0.725rem;
    justify-content: center;
    padding: 1rem;
    align-items: center;
}

.login,.signup{
    border: none;
    border-radius: 0.375rem;
    background-color: var(--primary-color);
    color: var(--background-color);
    padding: 0.55rem 1.25rem;
    transition: all 0.1s;
    font-size: 0.825rem;
    font-weight: 600;
}

.signup{
    background-color: var(--dark-gray);
}

.login:hover{
    background-color: #5254f8;
}

.rightMain{
    display: flex;
    justify-content: center;
    align-items: center;
}

.imageContainer{
    border-radius: 1.225rem;
    overflow: hidden;
    box-shadow: 0 4px 8px rgba(0, 0, 0,0.1);
    height: 45vh;
}

.sectionImage{
    height: 100%;
    width: 100%;
}

@media screen and (min-width:700px) {
    .mainSection{
        flex-direction: row;
        justify-content: space-between;
    }
    .leftMain{
        max-width: 50%;
        text-align: left;
    }
    .sectionTitle{
        padding-left: 0;
        font-size: 3rem;
    }
    .buttonGroup{
       justify-content: start;
       padding-left: 0;
    }
    .sectionLabel{
        font-size: 0.8rem;
    }
    .imageContainer{
        height: 65vh;
    }
    .sectionDesc{
        font-size: 0.8rem;
        color: var(--gray);
    }
}

.form{
    max-width: 880px;
    display: flex;
    padding: 0.6rem;
    gap: 2rem;
    justify-content: space-around;
    align-items: center;
    margin: auto auto;
}

.headContent{
    text-align: center;
    text-shadow: 0.2px 0.2px 0.2px black, 0 0 1em blue, 0 0 0.2em blue;
    color: rgb(237, 226, 121);
}

.leftform{
    background: radial-gradient(rgb(199, 199, 231), rgba(251, 174, 143, 0.505));
    max-width: 40%;
    margin-left: 2rem;
    border: 2px solid var(--dark-gray);
    border-radius: 8px;
}

#report, #found{
    padding: 10%;
    display: flex;
    flex-direction: column;
    justify-content: start;
}

.rightform{
    background: radial-gradient(rgb(199, 199, 231), rgba(143, 251, 177, 0.505));
    max-width: 40%;
    margin-left: 2rem;
    border: 2px solid var(--dark-gray);
    border-radius: 8px;
}

.leftform:hover,.rightform:hover{
    transition: all 0.3s;
    transform: scale(1.01);
    box-shadow: 1px 1px 6px var(--gray);
}

.reportform, .rightform{
    text-align: start;
}

.submitsection{
    display: flex;
    justify-content: center;
}

.submitbutton{
    background-color: var(--accent-color);
    width: 5rem;
    border-radius: 5%;
}

.submitbutton:hover{
    transition: all 0.2s;
    background-color: var(--primary-color);
}

